--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,12 @@ p {
   padding: 0 20px;
   max-width: 1100px;
 }
+.text-primary {
+  color: #f7c08a;
+}
+.lead {
+  font-size: 20px;
+}
 /* navbar */
 #navbar {
   background-color: #333;
@@ -57,3 +63,18 @@ p {
   background-color: #444;
   color: #f7c09a;
 }
+/* Showcase */
+#showcase {
+  background: url("../images/showcase.jpg") no-repeat center center/cover;
+  height: 600px;
+}
+#showcase .showcase-content {
+  color: #fff;
+  text-align: center;
+  padding-top: 170px;
+}
+#showcase .showcase-content h1 {
+  font-size: 60px;
+  line-height: 1.2em;
+}
+
