--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 html,
 body {
@@ -32,6 +33,38 @@ p {
 }
 .lead {
   font-size: 20px;
+}
+.btn {
+  display: inline-block;
+  background: #333;
+  padding: 13px 20px;
+  color: #fff;
+  font-size: 18px;
+  border: none;
+  cursor: pointer;
+}
+.btn:hover {
+  background: #f7c08a;
+  color: #333;
+}
+.btn_light {
+  background: #f4f4f4;
+  color: #333;
+}
+.bg_dark {
+  background: #333;
+  color: #fff;
+}
+.bg_light {
+  background: #f4f4f4;
+  color: #333;
+}
+.bg_primary {
+  color: #333;
+  background: #f7c08a;
+}
+.clr {
+  clear: both;
 }
 /* navbar */
 #navbar {
@@ -77,4 +110,48 @@ p {
   font-size: 60px;
   line-height: 1.2em;
 }
+#showcase .showcase-content p {
+  padding-bottom: 20px;
+  line-height: 1.7em;
+}
+/* Home Info */
+#home-info {
+  height: 400px;
+}
 
+#home-info .info-img {
+  float: left;
+  width: 50%;
+  background: url("../images/photo-1.jpg") no-repeat;
+  min-height: 100%;
+}
+
+#home-info .info-content {
+  float: right;
+  width: 50%;
+  height: 100%;
+  text-align: center;
+  padding: 50px 30px;
+  overflow: hidden;
+}
+
+#home-info .info-content p {
+  padding-bottom: 30px;
+}
+/* Features */
+.box {
+  float: left;
+  width: 33.33%;
+  padding: 50px;
+  text-align: center;
+}
+.box i {
+  margin-bottom: 10px;
+}
+/* footer */
+#main-footer {
+  text-align: center;
+  background: #444;
+  color: #fff;
+  padding: 20px;
+}
