--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,7 @@ p {
 }
 .l-heading {
   font-size: 40px;
+  line-height: 1.2;
 }
 /* Padding */
 .py-1 {
@@ -88,7 +89,7 @@ p {
 #navbar a {
   color: #fff;
 }
-#navbar h1 {
+#navbar .logo {
   float: left;
   padding-top: 20px;
 }
@@ -180,7 +181,7 @@ p {
 }
 /* Testimonials */
 #testimonials {
-  height: 600px;
+  height: 100%;
   background: url("../images/test-bg.jpg") no-repeat center center/cover;
   padding-top: 100px;
 }
